@@ -62,9 +62,6 @@ namespace BDArmory.UI
         private bool _guardModeEnabled = false;
         private bool _vesselTraceEnabled = false;
 
-        Vector3d floatingOriginCorrection = Vector3d.zero;
-        Dictionary<string, List<Tuple<float, Vector3, Quaternion>>> vesselTraces = new Dictionary<string, List<Tuple<float, Vector3, Quaternion>>>();
-
         // Vessel spawning
         // private bool _vesselsSpawned = false;
         // private bool _continuousVesselSpawning = false;
@@ -194,13 +191,14 @@ namespace BDArmory.UI
         {
             if (_vesselTraceEnabled)
             {
-                floatingOriginCorrection += FloatingOrigin.Offset;
+                if (!FloatingOrigin.Offset.IsZero() || !Krakensbane.GetFrameVelocity().IsZero())
+                    floatingOriginCorrection += FloatingOrigin.OffsetNonKrakensbane;
                 var survivingVessels = weaponManagers.SelectMany(tm => tm.Value).Where(wm => wm != null).Select(wm => wm.vessel).ToList();
                 foreach (var vessel in survivingVessels)
                 {
                     if (vessel == null) continue;
                     if (!vesselTraces.ContainsKey(vessel.vesselName)) vesselTraces[vessel.vesselName] = new List<Tuple<float, Vector3, Quaternion>>();
-                    vesselTraces[vessel.vesselName].Add(new Tuple<float, Vector3, Quaternion>(Time.time, vessel.transform.position + floatingOriginCorrection, vessel.transform.rotation));
+                    vesselTraces[vessel.vesselName].Add(new Tuple<float, Vector3, Quaternion>(Time.time, referenceRotationCorrection * (vessel.transform.position + floatingOriginCorrection), referenceRotationCorrection * vessel.transform.rotation));
                 }
                 if (survivingVessels.Count == 0) _vesselTraceEnabled = false;
             }
@@ -1113,13 +1111,36 @@ namespace BDArmory.UI
             return retTex;
         }
 
+        #region Vessel Tracing
+        Vector3d floatingOriginCorrection = Vector3d.zero;
+        Quaternion referenceRotationCorrection = Quaternion.identity;
+        Dictionary<string, List<Tuple<float, Vector3, Quaternion>>> vesselTraces = new Dictionary<string, List<Tuple<float, Vector3, Quaternion>>>();
+
         public void StartVesselTracing()
         {
             if (_vesselTraceEnabled) return;
             _vesselTraceEnabled = true;
             Debug.Log("[BDArmory.LoadedVesselSwitcher]: Starting vessel tracing.");
             vesselTraces.Clear();
-            floatingOriginCorrection = Vector3d.zero;
+
+            // Set the reference Up and Rotation based on the current FloatingOrigin.
+            var geoCoords = FlightGlobals.currentMainBody.GetLatitudeAndLongitude(Vector3.zero);
+            var altitude = FlightGlobals.getAltitudeAtPos(Vector3.zero);
+            var localUp = -FlightGlobals.getGeeForceAtPosition(Vector3.zero).normalized;
+            var q1 = Quaternion.FromToRotation(Vector3.up, localUp);
+            var q2 = Quaternion.AngleAxis(Vector3.SignedAngle(q1 * Vector3.forward, Vector3.up, localUp), localUp);
+            var referenceRotation = q2 * q1; // Plane tangential to the surface and aligned with north,
+            referenceRotationCorrection = Quaternion.Inverse(referenceRotation);
+            floatingOriginCorrection = altitude * localUp;
+
+            // Record starting points
+            var survivingVessels = weaponManagers.SelectMany(tm => tm.Value).Where(wm => wm != null).Select(wm => wm.vessel).ToList();
+            foreach (var vessel in survivingVessels)
+            {
+                if (vessel == null) continue;
+                vesselTraces[vessel.vesselName] = new List<Tuple<float, Vector3, Quaternion>>();
+                vesselTraces[vessel.vesselName].Add(new Tuple<float, Vector3, Quaternion>(Time.time, new Vector3((float)geoCoords.x, (float)geoCoords.y, altitude), referenceRotation));
+            }
         }
         public void StopVesselTracing()
         {
@@ -1141,5 +1162,6 @@ namespace BDArmory.UI
             }
             vesselTraces.Clear();
         }
+        #endregion
     }
 }
